Fix background image not covering 100% height

--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-/*  -webkit-background-size: cover;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;*/
+  background-size: cover;
   padding-top: 15%;
+  height: 100%;
 }
 
 p {
